--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.jpa.properties.hibernate.format_sql=true
 jwt.secret=944e72fa-a3a6-414d-be07-49dc89b8da35
 
 server.port=8082
-spring.cloud.registry.eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.cloud.client.instance.id=my-unique-client-id-scheduler
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+#spring.cloud.registry.eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#spring.cloud.client.instance.id=my-unique-client-id-scheduler
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
 spring.cloud.config.import-check.enabled=false
-server.servlet.contextPath=/scheduler
+#server.servlet.contextPath=/scheduler
