reodering user roles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.properties.hibernate.format_sql=true
 ##spring.flyway.locations=classpath:db/migration
 
 jwt.secret=944e72fa-a3a6-414d-be07-49dc89b8da35
+api.security.token.secret=${JWT_SECRET:944e72fa-a3a6-414d-be07-49dc89b8da35}
+
 
 server.port=8082
 #spring.cloud.registry.eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
