--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.flyway.baseline-on-migrate=false
 ##spring.flyway.locations=classpath:db/migration
 
-jwt.secret=944e72fa-a3a6-414d-be07-49dc89b8da35
+#jwt.secret=944e72fa-a3a6-414d-be07-49dc89b8da35
 api.security.token.secret=${JWT_SECRET:944e72fa-a3a6-414d-be07-49dc89b8da35}
 
 
